- Tidy up to remove some dependencies from the API (BeanPersistRequest and BeanQueryRequest) - Moved some internal objects from ebean/bean into ebean/common such as the EntityBean interface etc